[package]
name = "muscat"
description = "Multithreaded Side Channel Attacks Tool"
version = "0.2.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Ledger-Donjon/muscat"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0"
hex = "0.4.3"
npyz = "0.7.4"
ndarray = "0.15.6"
rayon = "1.7.0"
indicatif = "0.17.3"
ndarray-npy ="0.8.1"
itertools = "*"

[dev-dependencies]
criterion = "0.5"
ndarray-rand = "0.14"

[[bench]]
name = "cpa"
harness = false

[[bench]]
name = "snr"
harness = false
