[package]
name = "muscat"
description = "Multithreaded Side Channel Attacks Tool"
version = "0.2.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Ledger-Donjon/muscat"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
progress_bar = ["dep:indicatif"]

[dependencies]
serde_json = "1.0.115"
hex = "0.4.3"
npyz = "0.7.4"
ndarray = "0.15.6"
rayon = "1.10.0"
indicatif = { version = "0.17.8", optional = true }
ndarray-npy ="0.8.1"
itertools = "0.12.1"
thiserror = "1.0.58"

[dev-dependencies]
criterion = "0.5.1"
ndarray-rand = "0.14.0"
anyhow = "1.0.81"
muscat = { path = ".", features = ["progress_bar"] }

[[bench]]
name = "cpa"
harness = false

[[bench]]
name = "snr"
harness = false

[[bench]]
name = "dpa"
harness = false
