[package]
name = "muscatpy"
description = "Multithreaded Side Channel Attacks Tool"
version = "0.2.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Ledger-Donjon/muscat"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "muscatpy"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.23.4", features = ["extension-module"] }
muscat = { path = ".." }
numpy = "0.23.0"
